Add 'Summary' to project yaml.

--- a/TweetyLabDev.yml
+++ b/TweetyLabDev.yml
@@ -1,4 +1,5 @@
 Name: TweetyLabDev
+Summary: Programmer with a focus on creating tools, engines, and libraries that simplify development and expand what's known as possible.
 Theme: Default
 DefaultPage: Introduction/About.md
 Categories:
