Add CSHeaders write-up.

--- a/TweetyLabDev.yml
+++ b/TweetyLabDev.yml
@@ -10,3 +10,6 @@ Categories:
   Files:
   - Introduction/About.md
   - Introduction/Portfolio.md
+- CategoryName: Write-Ups
+  Files:
+  - WriteUps/PushingInteroperabilityToItsLimits.md
